lolcode3/lolcode_parser.go
// Code generated from lolcode.g4 by ANTLR 4.7.2. DO NOT EDIT.

package parser // lolcode

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'HAI'", "'KTHXBYE'", "'IM IN YR'", "'WILE'", "'IM OUTTA YR'", "'I HAS A'",
	"'ITZ'", "'VISIBLE'", "'MKAY?'", "'O RLY?'", "'YA RLY'", "'OIC'", "'MEBBE'",
	"'NO WAI'", "'GIMMEH'", "'HOW DUZ I'", "'YR'", "'AN YR'", "'IF U SAY SO'",
	"'R'", "'BOTH SAEM'", "'AN'", "'DIFFRINT'", "'BOTH OF'", "'EITHER OF'",
	"'BIGGR OF'", "'SMALLR OF'", "'SUM OF'", "'DIFF OF'", "'PRODUKT OF'", "'QUOSHUNT OF'",
	"'MOD OF'", "'MAEK'", "'A'", "'ALL OF'", "'ANY OF'", "'NOT'", "'I IZ'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "TYPE", "ATOM", "LABEL", "STRING", "WS",
}

var ruleNames = []string{
	"program", "code_block", "statement", "loop", "declaration", "print_block",
	"if_block", "else_if_block", "input_block", "func_decl", "assignment",
	"expression", "equals", "not_equals", "both", "either", "greater", "less",
	"add", "sub", "mul", "div", "mod", "cast", "all_", "any_", "not_", "func_",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type lolcodeParser struct {
	*antlr.BaseParser
}

func NewlolcodeParser(input antlr.TokenStream) *lolcodeParser {
	this := new(lolcodeParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "lolcode.g4"

	return this
}

// lolcodeParser tokens.
const (
	lolcodeParserEOF    = antlr.TokenEOF
	lolcodeParserT__0   = 1
	lolcodeParserT__1   = 2
	lolcodeParserT__2   = 3
	lolcodeParserT__3   = 4
	lolcodeParserT__4   = 5
	lolcodeParserT__5   = 6
	lolcodeParserT__6   = 7
	lolcodeParserT__7   = 8
	lolcodeParserT__8   = 9
	lolcodeParserT__9   = 10
	lolcodeParserT__10  = 11
	lolcodeParserT__11  = 12
	lolcodeParserT__12  = 13
	lolcodeParserT__13  = 14
	lolcodeParserT__14  = 15
	lolcodeParserT__15  = 16
	lolcodeParserT__16  = 17
	lolcodeParserT__17  = 18
	lolcodeParserT__18  = 19
	lolcodeParserT__19  = 20
	lolcodeParserT__20  = 21
	lolcodeParserT__21  = 22
	lolcodeParserT__22  = 23
	lolcodeParserT__23  = 24
	lolcodeParserT__24  = 25
	lolcodeParserT__25  = 26
	lolcodeParserT__26  = 27
	lolcodeParserT__27  = 28
	lolcodeParserT__28  = 29
	lolcodeParserT__29  = 30
	lolcodeParserT__30  = 31
	lolcodeParserT__31  = 32
	lolcodeParserT__32  = 33
	lolcodeParserT__33  = 34
	lolcodeParserT__34  = 35
	lolcodeParserT__35  = 36
	lolcodeParserT__36  = 37
	lolcodeParserT__37  = 38
	lolcodeParserTYPE   = 39
	lolcodeParserATOM   = 40
	lolcodeParserLABEL  = 41
	lolcodeParserSTRING = 42
	lolcodeParserWS     = 43
)

// lolcodeParser rules.
const (
	lolcodeParserRULE_program       = 0
	lolcodeParserRULE_code_block    = 1
	lolcodeParserRULE_statement     = 2
	lolcodeParserRULE_loop          = 3
	lolcodeParserRULE_declaration   = 4
	lolcodeParserRULE_print_block   = 5
	lolcodeParserRULE_if_block      = 6
	lolcodeParserRULE_else_if_block = 7
	lolcodeParserRULE_input_block   = 8
	lolcodeParserRULE_func_decl     = 9
	lolcodeParserRULE_assignment    = 10
	lolcodeParserRULE_expression    = 11
	lolcodeParserRULE_equals        = 12
	lolcodeParserRULE_not_equals    = 13
	lolcodeParserRULE_both          = 14
	lolcodeParserRULE_either        = 15
	lolcodeParserRULE_greater       = 16
	lolcodeParserRULE_less          = 17
	lolcodeParserRULE_add           = 18
	lolcodeParserRULE_sub           = 19
	lolcodeParserRULE_mul           = 20
	lolcodeParserRULE_div           = 21
	lolcodeParserRULE_mod           = 22
	lolcodeParserRULE_cast          = 23
	lolcodeParserRULE_all_          = 24
	lolcodeParserRULE_any_          = 25
	lolcodeParserRULE_not_          = 26
	lolcodeParserRULE_func_         = 27
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = lolcodeParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = lolcodeParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Code_block() ICode_blockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICode_blockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICode_blockContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *lolcodeParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, lolcodeParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Match(lolcodeParserT__0)
	}
	{
		p.SetState(57)
		p.Code_block()
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == lolcodeParserT__1 {
		{
			p.SetState(58)
			p.Match(lolcodeParserT__1)
		}

	}

	return localctx
}

// ICode_blockContext is an interface to support dynamic dispatch.
type ICode_blockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCode_blockContext differentiates from other interfaces.
	IsCode_blockContext()
}

type Code_blockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCode_blockContext() *Code_blockContext {
	var p = new(Code_blockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = lolcodeParserRULE_code_block
	return p
}

func (*Code_blockContext) IsCode_blockContext() {}

func NewCode_blockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Code_blockContext {
	var p = new(Code_blockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = lolcodeParserRULE_code_block

	return p
}

func (s *Code_blockContext) GetParser() antlr.Parser { return s.parser }

func (s *Code_blockContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *Code_blockContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *Code_blockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Code_blockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Code_blockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.EnterCode_block(s)
	}
}

func (s *Code_blockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.ExitCode_block(s)
	}
}

func (p *lolcodeParser) Code_block() (localctx ICode_blockContext) {
	localctx = NewCode_blockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, lolcodeParserRULE_code_block)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(62)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<lolcodeParserT__2)|(1<<lolcodeParserT__5)|(1<<lolcodeParserT__7)|(1<<lolcodeParserT__9)|(1<<lolcodeParserT__14)|(1<<lolcodeParserT__15)|(1<<lolcodeParserT__20)|(1<<lolcodeParserT__22)|(1<<lolcodeParserT__23)|(1<<lolcodeParserT__24)|(1<<lolcodeParserT__25)|(1<<lolcodeParserT__26)|(1<<lolcodeParserT__27)|(1<<lolcodeParserT__28)|(1<<lolcodeParserT__29)|(1<<lolcodeParserT__30))) != 0) || (((_la-32)&-(0x1f+1)) == 0 && ((1<<uint((_la-32)))&((1<<(lolcodeParserT__31-32))|(1<<(lolcodeParserT__32-32))|(1<<(lolcodeParserT__34-32))|(1<<(lolcodeParserT__35-32))|(1<<(lolcodeParserT__36-32))|(1<<(lolcodeParserT__37-32))|(1<<(lolcodeParserATOM-32))|(1<<(lolcodeParserLABEL-32)))) != 0) {
		{
			p.SetState(61)
			p.Statement()
		}

		p.SetState(64)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = lolcodeParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = lolcodeParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Loop() ILoopContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILoopContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILoopContext)
}

func (s *StatementContext) Declaration() IDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *StatementContext) Print_block() IPrint_blockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPrint_blockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPrint_blockContext)
}

func (s *StatementContext) If_block() IIf_blockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIf_blockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIf_blockContext)
}

func (s *StatementContext) Input_block() IInput_blockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInput_blockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInput_blockContext)
}

func (s *StatementContext) Func_decl() IFunc_declContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunc_declContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunc_declContext)
}

func (s *StatementContext) Assignment() IAssignmentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAssignmentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAssignmentContext)
}

func (s *StatementContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *lolcodeParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, lolcodeParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(66)
			p.Loop()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(67)
			p.Declaration()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(68)
			p.Print_block()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(69)
			p.If_block()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(70)
			p.Input_block()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(71)
			p.Func_decl()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(72)
			p.Assignment()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(73)
			p.Expression()
		}

	}

	return localctx
}

// ILoopContext is an interface to support dynamic dispatch.
type ILoopContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLoopContext differentiates from other interfaces.
	IsLoopContext()
}

type LoopContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLoopContext() *LoopContext {
	var p = new(LoopContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = lolcodeParserRULE_loop
	return p
}

func (*LoopContext) IsLoopContext() {}

func NewLoopContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LoopContext {
	var p = new(LoopContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = lolcodeParserRULE_loop

	return p
}

func (s *LoopContext) GetParser() antlr.Parser { return s.parser }

func (s *LoopContext) AllLABEL() []antlr.TerminalNode {
	return s.GetTokens(lolcodeParserLABEL)
}

func (s *LoopContext) LABEL(i int) antlr.TerminalNode {
	return s.GetToken(lolcodeParserLABEL, i)
}

func (s *LoopContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *LoopContext) Code_block() ICode_blockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICode_blockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICode_blockContext)
}

func (s *LoopContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LoopContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LoopContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.EnterLoop(s)
	}
}

func (s *LoopContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.ExitLoop(s)
	}
}

func (p *lolcodeParser) Loop() (localctx ILoopContext) {
	localctx = NewLoopContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, lolcodeParserRULE_loop)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.Match(lolcodeParserT__2)
	}
	{
		p.SetState(77)
		p.Match(lolcodeParserLABEL)
	}
	{
		p.SetState(78)
		p.Match(lolcodeParserT__3)
	}
	{
		p.SetState(79)
		p.Expression()
	}
	{
		p.SetState(80)
		p.Code_block()
	}
	{
		p.SetState(81)
		p.Match(lolcodeParserT__4)
	}
	{
		p.SetState(82)
		p.Match(lolcodeParserLABEL)
	}

	return localctx
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = lolcodeParserRULE_declaration
	return p
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = lolcodeParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) LABEL() antlr.TerminalNode {
	return s.GetToken(lolcodeParserLABEL, 0)
}

func (s *DeclarationContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.EnterDeclaration(s)
	}
}

func (s *DeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.ExitDeclaration(s)
	}
}

func (p *lolcodeParser) Declaration() (localctx IDeclarationContext) {
	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, lolcodeParserRULE_declaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(90)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(84)
			p.Match(lolcodeParserT__5)
		}
		{
			p.SetState(85)
			p.Match(lolcodeParserLABEL)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(86)
			p.Match(lolcodeParserT__5)
		}
		{
			p.SetState(87)
			p.Match(lolcodeParserLABEL)
		}
		{
			p.SetState(88)
			p.Match(lolcodeParserT__6)
		}
		{
			p.SetState(89)
			p.Expression()
		}

	}

	return localctx
}

// IPrint_blockContext is an interface to support dynamic dispatch.
type IPrint_blockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPrint_blockContext differentiates from other interfaces.
	IsPrint_blockContext()
}

type Print_blockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPrint_blockContext() *Print_blockContext {
	var p = new(Print_blockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = lolcodeParserRULE_print_block
	return p
}

func (*Print_blockContext) IsPrint_blockContext() {}

func NewPrint_blockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Print_blockContext {
	var p = new(Print_blockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = lolcodeParserRULE_print_block

	return p
}

func (s *Print_blockContext) GetParser() antlr.Parser { return s.parser }

func (s *Print_blockContext) AllExpression() []IExpressionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionContext)(nil)).Elem())
	var tst = make([]IExpressionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionContext)
		}
	}

	return tst
}

func (s *Print_blockContext) Expression(i int) IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *Print_blockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Print_blockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Print_blockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.EnterPrint_block(s)
	}
}

func (s *Print_blockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(lolcodeListener); ok {
		listenerT.ExitPrint_block(s)
	}
}

func (p *lolcodeParser) Print_block() (localctx IPrint_blockContext) {
	localctx = NewPrint_blockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, lolcodeParserRULE_print_block)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(92)
		p.Match(lolcodeParserT__7)
	}
	p.SetState(96)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(93)
				p.Expression()
			}

		}
		p.SetState(98)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())
	}
	p.SetState(100)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == lolcodeParserT__8 {
		{
			p.SetState(99)
			p.Match(lolcodeParserT__8)
		}

	}

	return localctx
}

// IIf_blockContext is an interface to support dynamic dispatch.
type IIf_blockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
